# bili-search

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.githooks/: pre-commit
agents/: author.py  query.py  suggest.py  tests.py
apps/: arg_parser.py  search_app.py  search_app_cli.py  search_app_service.py  websocket_app.py
cli/: bsdk.py  bssv.py  common.py  local_runtime.py
configs/: envs.json  envs.py  secrets.json.example  secrets_template.json
converters/: audio_to_subtitle.py  date_field_converter.py  date_ranger.py  operators.py  pinyinizer.py  query_dsl_constructor.py  query_filter_extractor.py  stat_field_converter.py  subtitle_puncter.py  times.py  video_to_audio.py
debugs/: build_live_case_corpus.py  check_embedding_term_scores.py  check_live_case_es_coverage.py  compare_relaxed_retry_search_boosts.py  compare_vw_vwr.py  estimate_case_pubdate_ranks.py  export_semantic_docs_from_cases.py  export_semantics_docs_jsonl.py  inspect_llm_prompt_selection.py  inspect_llm_routing.py  inspect_mixed_ascii_owner_query.py  probe_analyze_owner_alias.py  probe_owner_anchor_query.py  probe_owner_intent_context_candidates.py  probe_related_owners.py  probe_related_tokens.py  probe_search_owners.py  probe_search_videos.py  probe_semantic_snapshot_live.py  probe_semantics_live.py  probe_short_han_vector_constraint.py  profile_es_tok_exclusion_path.py  run_live_case_matrix.py  run_live_chat_cases.py  run_live_qa_quality.py  scan_sensitive_info.py  summarize_chat_report.py  summarize_live_case_matrix.py  trace_chat_stream_timing.py  (+6 more)
dsl/: node.py  (+6 more)
(+373 files in other folders)
